# ML_HW_1

./: .gitignore  LICENCE  README.md  data.csv  hot_encoder  model.pickle  pyproject.toml  server.py
