[tool.poetry]
name = "homework HSE 2024"
version = "1.0.0"
description = ""
authors = ["Ilya Mevshiy <ilyamevshiy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "~0.115.5"
uvicorn = "~0.32.1"
pandas = "~2.2.3"
scikit-learn = "~1.5.2"
python-multipart = "~0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
